# mqxx

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  README.md  conanfile.py
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
docs/: architecture.md  beginner-guide.md  build-setup.md  code-explanation.md  dependencies.md  project-decisions.md  protocol-notes.md  repository-layout.md  tmp-notes.md
docs/decisions/: 0001-boost-asio-over-standalone-asio.md  0001-standalone-asio-over-boost-asio.md  0002-googletest-over-catch2.md  0002-prefer-cxx-modules.md  0003-quill-for-logging.md  0004-pin-moqt-baseline-to-draft-17.md  0005-prefer-result-types-over-exceptions.md
include/mqxx/moqt/: full_track_name.hpp  namespace_registry.hpp
include/mqxx/transport/: fake_transport_session.hpp  transport_session.hpp
include/saltpepper/moqt/: full_track_name.hpp  namespace_registry.hpp  static_track_descriptor.hpp
include/saltpepper/transport/: fake_transport_session.hpp  transport_session.hpp
mqxx/common/: CMakeLists.txt  byte_buffer.hpp  result.hpp
mqxx/moqt/: CMakeLists.txt  full_track_name.cpp  full_track_name.hpp  namespace_registry.cpp  namespace_registry.hpp  relay_seams.hpp  session_roles.hpp  session_types.hpp  static_track_descriptor.hpp  track_identity.cpp  track_identity.hpp
mqxx/transport/: CMakeLists.txt  fake_session.cpp  fake_session.hpp  session.hpp
profiles/: macos-homebrew-llvm-ninja-debug
src/common/include/mqxx/common/: byte_buffer.hpp  result.hpp
src/moqt/: full_track_name.cpp  full_track_name.cppm  namespace_registry.cpp  namespace_registry.cppm  static_track_descriptor.cppm
src/moqt/include/mqxx/moqt/: full_track_name.hpp  static_track_descriptor.hpp
src/transport/: fake_transport_session.cpp  fake_transport_session.cppm  transport_session.cppm
src/transport/include/mqxx/transport/: fake_transport_session.hpp  transport_session.hpp
tests/: CMakeLists.txt  moqt_name_tests.cpp  moqt_namespace_registry_tests.cpp  moqt_session_roles_tests.cpp  moqt_static_track_descriptor_tests.cpp  test_framework.cppm  test_framework.hpp  test_main.cpp  transport_fake_session_tests.cpp  transport_fake_transport_session_tests.cpp
tests/common/: byte_buffer_test.cpp  byte_view_test.cpp
tests/moqt/: helpers.hpp  namespace_registry_test.cpp  track_identity_test.cpp
